<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingStart="24dp"
    android:paddingEnd="25dp"
    android:background="@drawable/accent_panel_background_br_30">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/now_in_running_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/now_in_running_img_with_overlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/now_in_running_title"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_in_running"
        android:textColor="@color/light_gray"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/now_in_running_image"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/now_in_running_time"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_example"
        android:textColor="@color/light_gray"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/now_in_running_image"
        app:layout_constraintTop_toBottomOf="@+id/now_in_running_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/now_in_running_distance"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_example_value"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/now_in_running_kal"
        style="@style/TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_example_value"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/now_in_running_distance" />

</androidx.constraintlayout.widget.ConstraintLayout>